# SKYROCKET

./: README.md  pyproject.toml
config/: portfolio.json  rules.json
docs/: ROADMAP.md  RULES.md
src/: app.py  cli.py  main.py
src/advisor/: ai_advisor.py
src/alerts/: price_alert_manager.py
src/backtesting/: backtest_engine.py  backtest_result.py  trade.py  trade_history.py
src/config/: config_loader.py  settings.py  symbols.py
src/core/: application.py  bootstrap.py  config_validator.py  container.py  event_bus.py  health_check.py  integration_service.py  logger.py  pipeline.py  plugin_manager.py  secrets.py  skyrocket_engine.py  state_manager.py  system_report.py  task_scheduler.py  version.py
src/data/: data_provider.py  fact.py  fact_generator.py  fact_ids.py  kraken_account_client.py  kraken_client.py  kraken_market_provider.py  market.py  timeframe_market.py
src/database/: database.py  database_manager.py  position_repository.py  report_repository.py  transaction_repository.py
src/dca/: dca_scheduler.py
src/decision/: decision.py  decision_engine.py  sky_score_engine.py
src/engine/: skyrocket_engine.py
src/engines/: decision.py  decision_engine.py  rule_engine.py  skyscore_engine.py
src/facts/: facts_engine.py
src/history/: history_manager.py
src/indicators/: indicator_engine.py  technical_indicators.py
src/market/: market_cycle_engine.py  market_data_engine.py
src/models/: analysis_result.py
src/portfolio/: allocation_manager.py  asset.py  capital_manager.py  dca_allocator.py  dca_manager.py  opportunity_manager.py  portfolio.py  (+13 more)
(+23 files in other folders)
