[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyrocket"
version = "1.0.0"
description = "Crypto Portfolio Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    {name = "Anastasis"}
]

dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.1"
]

[project.scripts]
skyrocket = "src.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
